@@ -1,8 +1,18 @@
+2007.Nov.26 (svn.debian.org/tux4kids - revision 350)
+  Options:
+	
+      * Reworked the user login to make it more robust and
+	user-friendly.  This version should be pretty generally usable.
+	
+      Tim Holy <holy@wustl.edu>
+
 2007.Nov.26 (svn.debian.org/tux4kids - revision 342)
   Options:
       * Added support for user login. This should be helpful in school
 	settings where all students log in with the same username.  See
 	the README for details.
+
+      Tim Holy <holy@wustl.edu>
 	
 2007.Nov.18 (svn.debian.org/tux4kids - revision 327)
 
